# fairseq

./: .gitignore  BUILD.bazel  README.md  WORKSPACE
fairseq/: .bazelignore  .bazelrc  BUILD.bazel  WORKSPACE  checkpoint_utils.py  requirements.txt  utils.py
fairseq/customrules/: http_archive_ext.bzl
fairseq/data/: BUILD.bazel
fairseq/data/audio/: BUILD.bazel
fairseq/data/multilingual/: BUILD.bazel
fairseq/logext/: BUILD.bazel
fairseq/models/: BUILD.bazel  __init__.py  fairseq_model.py  model_registry.py
fairseq/models/wav2vec/: BUILD.bazel  wav2vec2.py
fairseq/modules/: BUILD.bazel  __init__.py  positional_embedding.py  simple_module.bzl  transformer_sentence_encoder.py  transformer_sentence_encoder_layer.py
