load("@com_github_bazelbuild_buildtools//buildifier:def.bzl", "buildifier")
load("@rules_python//python:defs.bzl", "py_runtime_pair")

buildifier(
    name = "buildifier",
)

py_runtime(
    name = "python38_runtime",
    files = ["@python38//:files"],
    interpreter = "@python38//:python_bin",
    python_version = "PY3",
    visibility = ["//visibility:public"],
)

py_runtime_pair(
    name = "py38_runtime_pair",
    py2_runtime = None,
    py3_runtime = ":python38_runtime",
)

toolchain(
    name = "py38_toolchain",
    toolchain = ":py38_runtime_pair",
    toolchain_type = "@bazel_tools//tools/python:toolchain_type",
)
