load("@py_deps//:requirements.bzl", "requirement")

py_library(
    name = "data_utils",
    srcs = ["data_utils.py"],
    visibility = ["//visibility:public"],
    deps = [
        requirement("torch"),
        requirement("numpy"),
    ],
)

py_library(
    name = "iterators",
    srcs = glob(["iterators.py"]),
    visibility = ["//visibility:public"],
    deps = [
        ":data_utils",
    ],
)
