load("@py_deps//:requirements.bzl", "requirement")

py_library(
    name = "data_utils",
    srcs = ["data_utils.py"],
    visibility = ["//visibility:public"],
    deps = [
        requirement("torch"),
        requirement("numpy"),
    ],
)

py_library(
    name = "dictionary",
    srcs = ["dictionary.py"],
    visibility = ["//visibility:public"],
    deps = [
        requirement("torch"),
        requirement("numpy"),
        ":data_utils",
        "//:binarizer",
        "//:file_io",
        "//:tokenizer",
        "//:utils",
    ],
)

py_library(
    name = "iterators",
    srcs = glob(["iterators.py"]),
    visibility = ["//visibility:public"],
    deps = [
        ":data_utils",
    ],
)
