load("@py_deps//:requirements.bzl", "requirement")

py_library(
    name = "fairseq_model",
    srcs = [
        "fairseq_model.py",
    ],
    visibility = ["//visibility:public"],
    deps = [
        requirement("torch"),
        requirement("numpy"),
        ":fairseq_decoder",
        ":fairseq_encoder",
        "//:checkpoint_utils",
        "//:utils",
        "//data:dictionary",
    ],
)

py_library(
    name = "fairseq_encoder",
    srcs = [
        "fairseq_encoder.py",
    ],
    visibility = ["//visibility:public"],
    deps = [
        requirement("torch"),
        requirement("numpy"),
    ],
)

py_library(
    name = "fairseq_decoder",
    srcs = [
        "fairseq_decoder.py",
    ],
    visibility = ["//visibility:public"],
    deps = [
        requirement("torch"),
        requirement("numpy"),
        "//:utils",
    ],
)

py_library(
    name = "model_registry",
    srcs = [
        "model_registry.py"
    ],
    visibility = ["//visibility:public"],
    deps = [
        ":fairseq_model",
    ],
)
