load("@py_deps//:requirements.bzl", "requirement")

py_library(
    name = "gelu",
    srcs = [
        "gelu.py",
    ],
    visibility = ["//visibility:public"],
    deps = [
        requirement("torch"),
    ],
)

py_library(
    name = "multihead_attention",
    srcs = [
        "multihead_attention.py",
    ],
    visibility = ["//visibility:public"],
    deps = [
        requirement("numpy"),
        requirement("torch"),
    ],
)
