load("@py_deps//:requirements.bzl", "requirement")

py_library(
    name = "modules",
    srcs = [
        "fp32_group_norm.py",
        "gelu.py",
        "grad_multiply.py",
        "gumbel_vector_quantizer.py",
        "layer_norm.py",
        "multihead_attention.py",
    ],
    visibility = ["//visibility:public"],
    deps = [
        requirement("torch"),
        requirement("numpy"),
    ],
)
