load("@py_deps//:requirements.bzl", "requirement")

py_library(
    name = "wav2vec",
    srcs = glob(["wav2vec2.py"]),
    visibility = ["//visibility:public"],
    deps = [
        requirement("torch"),
        requirement("numpy"),
        "//:utils",
        "//data:data_utils",
        "//models:fairseq_model",
        "//models:model_registry",
        "//modules:fp32_group_norm",
        "//modules:grad_multiply",
        "//modules:gumbel_vector_quantizer",
        "//modules:layer_norm",
        "//modules:multihead_attention",
        "//modules:same_pad",
        "//modules:transpose_last",
        "//modules:transformer_sentence_encoder"
    ],
)
